[gd_scene load_steps=34 format=2]

[ext_resource path="res://Sprites/Abaddon/sorcerer attack_Animation 1_7.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Abaddon/villain.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Abaddon/sorcerer attack_Animation 1_5.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Abaddon/sorcerer attack_Animation 1_6.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Abaddon/sorcerer attack_Animation 1_8.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Abaddon/sorcerer attack_Animation 1_3.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Abaddon/sorcerer attack_Animation 1_0.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Abaddon/sorcerer attack_Animation 1_4.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Abaddon/sorcerer attack_Animation 1_2.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Abaddon/sorcerer attack_Animation 1_1.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Abaddon/sorcerer attack_Animation 1_9.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Abaddon/Explosion 2 SpriteSheet.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Abaddon.gd" type="Script" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 7 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 11 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 11 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 11 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 7 ), ExtResource( 2 ) ],
"loop": true,
"name": "Attack",
"speed": 10.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 12 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 12 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 12 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 12 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 12 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 12 )
region = Rect2( 288, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 12 )
region = Rect2( 336, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 12 )
region = Rect2( 384, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 12 )
region = Rect2( 432, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 12 )
region = Rect2( 480, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 12 )
region = Rect2( 528, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 12 )
region = Rect2( 576, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 12 )
region = Rect2( 624, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 12 )
region = Rect2( 672, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 12 )
region = Rect2( 720, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 12 )
region = Rect2( 768, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 12 )
region = Rect2( 816, 0, 48, 48 )

[sub_resource type="SpriteFrames" id=20]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "Death",
"speed": 10.0
} ]

[node name="Abaddon" type="KinematicBody2D"]
script = ExtResource( 13 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 29, 5 )
scale = Vector2( 0.730332, 0.800027 )
frames = SubResource( 1 )
animation = "Idle"
playing = true
offset = Vector2( -31, -79 )

[node name="Death" type="AnimatedSprite" parent="."]
position = Vector2( 5.05901, -63.8499 )
scale = Vector2( 3.62254, 4.25625 )
frames = SubResource( 20 )
animation = "Death"
frame = 10

[node name="SummonTimer" type="Timer" parent="."]

[node name="HurtBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]

[node name="SummonPoint" type="Position2D" parent="."]
